--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -85,7 +85,7 @@ import Footer from "../components/Footer.astro";
         alt="Policard"
       />
       <div class="card-content">
-        <h2>MEXIC0DE-TUTO</h2>
+        <h2>POLICARD</h2>
         <p>
           Blog oficial de MEXIC0DE. Desarrollado con Astro, es un blog con
           articulos de tecnologia y tutoriales.
