--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,10 @@
     --primary: #56f09f;
     --light: #fffbec;
     --dark: #0b1929;
+    --red: #dc3243;
+    --yellow: #f2c94c;
+    --blue: #2f80ed;
+    --purple: #2a184a;
     --mexFont: 'Library 3 am';
     --font: 'DM Sans',system-ui, sans-serif;
     --font2: 'Montserrat',system-ui, sans-serif;
