--- a/src/pages/integrantes.astro
+++ b/src/pages/integrantes.astro
@@ -1,503 +1,121 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Team from "../layouts/Team.astro";
 import Chepe from "../../public/assets/Chepe.jpg";
 import Mario from "../../public/assets/Mario.jpg";
 import Senuez from "../../public/assets/Senuez.jpg";
 import Kike from "../../public/assets/Kike.jpg";
 import Temo from "../../public/assets/Temo.jpg";
-import mountain from "../../public/assets/mountain.png"
-import Wrapper from "../components/Wrapper.astro";
+import TeamCard from "../components/TeamCard.astro";
 /* Aqui se importa los componentes si es que usan */
 ---
 
-<Layout title="Integrantes">
+<Team title="Integrantes">
   <!-- Dentro de este Layout va su html -->
 
-    <section class="parallax">
-        <img src="/assets/mountain.svg" alt="mountain" id="mountain" decoding="async" loading="lazy"/>
-        <img src="/assets/hill.svg" alt="hill" id="hill" decoding="async" loading="lazy"/>
-        <img src="/assets/piramid.svg" alt="piramid" id="piramid" decoding="async" loading="lazy"/>
-        <img src="/assets/agave.svg" alt="agave" id="agave" decoding="async" loading="lazy" />
-        <img src="/assets/mexRes.svg" alt="mexcode" id="bg-res" decoding="async" loading="lazy"/>
-        <h1 id="mex">INTEGRANTES </h1>
-    </section>
-  
-    <section class="sec" id="start">
-        <br/>
-        <Wrapper staticTxt="MEXIC0DE ES" one="Innovacion" two="Creatividad" three="Desarrollo" four="un Equipo"/>
-
-        <div class="container">
-            <div class="grid col-3 md-col-2 sm-col-1">
-                <div class="card">
-                  <div class="card1">
-              <div class="head">
-                  <div class="circle"></div>
-                  <div class="img">
-                      <img src={Chepe} alt="">
-                  </div>
-              </div>
-      
-              <div class="description">
-                  <h3>José Angel Arjona</h3>
-                  <h4>Lider del Proyecto</h4>
-                  <p>Creador de Policard y UPWorks</p>
-                  <p>Tiene un pene de 7 pulgadas y lo pretenden 5 morras</p>
-              </div>
-      
-              <div class="contact">
-                  <a href="/jaam">Ver portafolio</a>
-              </div>
-          </div>
-                </div>
-      
-      
-                <div class="card">
-                  <div class="card1">
-              <div class="head">
-                  <div class="circle"></div>
-                  <div class="img">
-                      <img src={Mario} alt="">
-                  </div>
-              </div>
-      
-              <div class="description">
-                  <h3>Mario Alejandra</h3>
-                  <h4>Full - Stack</h4>
-                  <p>Campeón del mundo en el torneo de chupar penes a señores de 50 y más</p>
-                  <p>Fan de la verguita de dama</p>
-              </div>
-      
-              <div class="contact">
-                  <a href="#">Ver portafolio</a>
-              </div>
-          </div>
-                </div>
-      
-      
-                <div class="card">
-                  <div class="card1">
-              <div class="head">
-                  <div class="circle"></div>
-                  <div class="img">
-                      <img src={Temo} alt="">
-                  </div>
-              </div>
-      
-              <div class="description">
-                  <h3>Edu Flores</h3>
-                  <h4>Prostituta nacional</h4>
-                  <p>Hola Arilet, te amo pero tengo que seguir.</p>
-                  <p>Experiencia en destrozar cucas</p>
-              </div>
-      
-              <div class="contact">
-                  <a href="#">Ver portafolio</a>
-              </div>
-          </div>
-                </div>
-      
-      
-                <div class="card">
-                  <div class="card1">
-            <div class="head">
-                <div class="circle"></div>
-                <div class="img">
-                    <img src={Senuez} alt="">
-                </div>
-            </div>
-      
-            <div class="description">
-                <h3>Cesar Zepeda</h3>
-                <h4>Fabrica de Tamal</h4>
-                <p>Experto mundial en analizar cucas</p>
-                <p>Barba de benzama y pene de CR7</p>
-            </div>
-      
-            <div class="contact">
-                <a href="#">Ver portafolio</a>
-            </div>
-        </div>
-      
-                </div>
-      
-      
-                <div class="card">
-                    <div class="card1">
-                        <div class="head">
-                            <div class="circle"></div>
-                            <div class="img">
-                                <img src={mountain} alt="">
-                            </div>
-                        </div>
-                
-                        <div class="description">
-                            <h3>PLAYLIST DE MEXIC0DE</h3>
-                            <h4>Canciones de los integrantes del equipo</h4>
-                            <p>Escuchar bajo su propio riesgo</p>
-                        </div>
-                
-                        <div class="contact">
-                            <a href="https://music.youtube.com/playlist?list=PL7ZwW-YGq8oZIc7yYBnn-pfq0AjqN7Vo3&feature=share">Ver portafolio</a>
-                        </div>
-                    </div>
-
-                </div>
-      
-      
-                <div class="card"><div class="card1">
-          <div class="head">
-              <div class="circle"></div>
-              <div class="img">
-                  <img src={Kike} alt="">
-              </div>
-          </div>
-      
-          <div class="description">
-              <h3>Enrique Armenta</h3>
-              <h4>Prostituta nacional</h4>
-              <p>Analizador de penes en masa venal</p>
-              <p>En un compromiso dile que hay pene y va</p>
-          </div>
-      
-          <div class="contact">
-              <a href="#">Ver portafolio</a>
-          </div>
-      </div></div>
-            </div>
-       </div>
-      
-    </section>  
-  
-</Layout>
+  <div class="team-carousel swiper">
+    <div class="swiper-wrapper">
+      <div class="team-member swiper-slide">
+        <TeamCard
+          name="Mario Alejandro Rosales Muñoz"
+          img={Mario}
+          rol="Full Stack - Senior "
+          path="./mario"
+          color="#03bfcb"
+        />
+      </div>
+      <div class="team-member swiper-slide">
+        <TeamCard
+          name="Jose Angel Arjona Matheis"
+          img={Chepe}
+          rol="FrontEnd Developer"
+          path="./jaam"
+          color="#26ae5e"
+          skills={["UI/UX", "Front End Development", "Web Development"]}
+        />
+      </div>
+      <div class="team-member swiper-slide">
+        <TeamCard
+          name="Cesar Eduardo Zepeda Melendez"
+          img={Senuez}
+          rol="Full Stack - Senior "
+          path="./"
+          color="#03bfcb"
+        />
+      </div>
+      <!-- Los siguientes elementos se mostrarán en el carrusel -->
+      <div class="team-member swiper-slide">
+        <TeamCard
+          name="Enrique Aguilar Armenta"
+          img={Kike}
+          rol="Puta Barara "
+          path="./"
+          color="#03bfcb"
+        />
+      </div>
+      <div class="team-member swiper-slide">
+        <TeamCard
+          name="Eduardo Antonio Flores de Leon"
+          img={Temo}
+          rol="Vaca punteada puta "
+          path="./mario"
+          color="#03bfcb"
+        />
+      </div>
+    </div>
+    <!-- Flechas de navegación -->
+    <div class="swiper-button-next arrows"></div>
+    <div class="swiper-button-prev arrows"></div>
+  </div>
+</Team>
 
 <style>
-  /* Aqui va el css */
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Library 3 am', cursive;
-}
-.parallax {
-	background: #caf6dc;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-}
-#mex {
-	color: var(--light);
-  position: absolute;
-  font-weight: 900;
-  font-size: 6em;
-	font-family: var(--font2);
-	text-shadow:2px 2px 2px rgba(0,0,0,0.5);
-}
-#bg-res{
-	display: none;
-}
-.parallax img {
-	position: absolute;
-	top 0;
-	left 0;
-	width: 100%;
-	pointer-events: none;
-}
-
-.sec{
-	position: relative;
-	display: flex;
-  flex-direction: column;
-  align-items: center;
-  min-height: 400px;
-  padding-top: 100px;
-	background: var(--green);
-}
-.curve {
-  position: absolute;
-  height: 250px;
-  width: 100%;
-  bottom: 0;
-  text-align: center;
-}
-.curve::before {
-  content: '';
-  display: block;
-  position: absolute;
-  border-radius: 100% 50%;
-  width: 55%;
-  height: 100%;
-  transform: translate(85%, 60%);
-  background-color: hsl(216, 21%, 16%);
-}
-.curve::after {
-  content: '';
-  display: block;
-  position: absolute;
-  border-radius: 100% 50%;
-  width: 55%;
-  height: 100%;
-  background-color: #3c31dd;
-  transform: translate(-4%, 40%);
-  z-index: -1;
-}
-
-/* Line Separator */
-.separator{
- 	position: relative;
-	width: 100%;
-	height: 2px;
-	background: var(--light);
-}
-
-/* Responsive */
-@media screen and (width: 1024px) {
-	.parallax {
-	height: 60vh;
+  .arrows {
+    color: var(--light);
   }
-}
-
-@media screen and (max-width: 768px) {
-  .parallax {
-	height: 60vh;
-  }
-  .parallax img {
-	display: none;
-  }
-
-  #bg-res{
-	display: block;
-	position: absolute;
-	top 0;
-	left 0;
-	width: 100%;
-	height: 120vh;
-	pointer-events: none;
-  }
-
-  #mex {
-	font-size: 3em;
-  }
-
-  .img{
-	display: flex;
-	justify-content: center;
-  }
-  
-  h2{
-      font-size: 1.5em;
-  }
-  h3{
-      font-size: 1.5em;
-  }
-  .sec p{
-      font-size: 1em;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  .parallax {
-	height: 60vh;
-  }
-
-  #bg-res{
-	margin-top: 10%;
-  }
-}
-.card {
-    position: relative;
-    width: 330px;
-    height: 450px;
-    
-    border-radius: 5px;
-    overflow: hidden;
-    transition: .5s;
-    
-}
-
-.card1 {
-    position: relative;
-    width: 300px;
-    height: 400px;
-    background: #0b1929;
-    border-radius: 5px;
-    overflow: hidden;
-    transition: .5s;
-    margin: 15px 20px;
-}
-
-.card1:hover {
-    box-shadow: 0 5px 15px rgba(220, 229, 230, 0.5);
-    transform: translateY(-15px);
-}
-
-.card1 .head {
-    height: 125px;
+  .team-carousel {
     width: 100%;
+    max-width: 90%;
+    margin: 0 auto;
     position: relative;
-}
-
-.card1 .head .circle {
-    position: absolute;
-    width: 300px;
-    height: 300px;
-    border-radius: 50%;
-    background: #fccf4c;
-    bottom: 0;
-}
-
-.card1 .head .img {
-    width: 150px;
-    height: 150px;
-    position: absolute;
-    background: #fff;
-    padding: 5px;
-    border-radius: 50%;
-    bottom: -30%;
-    left: 50%;
-    transform: translate(-50%);
-}
-
-.card1 .head .img img {
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    object-fit: cover;
-}
-
-
-.card1 .description {
-    height: 200px;
-    padding: 40px 20px 20px 20px;
-    border-bottom: solid 1px rgba(236, 238, 238, 0.18);
-    text-align: center;
-}
-
-.card1 .description h3 {
-    color: #fffbec;
-}
-
-.card1 .description h4 {
-    color: #fccf4c;
-}
-
-.card1 .description p {
-    margin-top: 20px;
-    font-size: 15px;
-    color: #fffbec;
-}
-
-
-.card1 .contact {
-    width: 100%;
-    height: 75px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.card1 .contact a {
-    text-decoration: none;
-    color: #fff;
-    background: #10372a;
-    padding: 5px 20px;
-    border-radius: 5px;
-    transition: .3s;
-}
-
-.card1 .contact a:hover {
-    
-    background: #fccf4c;
-   
-}
-
-.parallax {
-	background: #caf6dc;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-}
-
-#mex {
-	color: var(--light);
-  position: absolute;
-  font-weight: 900;
-  font-size: 6em;
-	font-family: var(--font2);
-	text-shadow:2px 2px 2px rgba(0,0,0,0.5);
-}
-
-#bg-res{
-	display: none;
-}
-
-.parallax img {
-	position: absolute;
-	top 0;
-	left 0;
-	width: 110%;
-	pointer-events: none;
-}
-
-.sec{
-	position: relative;
-	display: flex;
-  flex-direction: column;
-  align-items: center;
-  min-height: 400px;
-  padding-top: 100px;
-	background: var(--green);
-    
-}
-
-
-.sec p{
-	font-size: 1.5em;
-	color:#fff
-}
-
-/* Curved bg with plain CSS */
-.curve {
-  position: absolute;
-  height: 250px;
-  width: 100%;
-  bottom: 0;
-  text-align: center;
-}
-.curve::before {
-  content: '';
-  display: block;
-  position: absolute;
-  border-radius: 100% 50%;
-  width: 55%;
-  height: 100%;
-  transform: translate(85%, 60%);
-  background-color: hsl(216, 21%, 16%);
-}
-.curve::after {
-  content: '';
-  display: block;
-  position: absolute;
-  border-radius: 100% 50%;
-  width: 55%;
-  height: 100%;
-  background-color: #3c31dd;
-  transform: translate(-4%, 40%);
-  z-index: -1;
-}
-
-/* Line Separator */
-.separator{
- 	position: relative;
-	width: 100%;
-	height: 2px;
-	background: var(--light);
-}
-
-  
+  }
 </style>
 
-<script src = "../src/scripts/parallax.js" type="text/javascript"></script>
+<script>
+  import Swiper from "https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.esm.browser.min.js";
+  const teamCarousel = new Swiper(".team-carousel", {
+    slidesPerView: 2,
+    spaceBetween: 0,
+    enabled: true,
+    grabCursor: true,
+    autoplay: {
+      delay: 5000,
+    },
+    keyboard: {
+      enabled: true,
+      onlyInViewport: false,
+    },
+    lazyPreloaderClass: "swiper-lazy-preloader",
+    rewind: true,
+    navigation: {
+      nextEl: ".swiper-button-next",
+      prevEl: ".swiper-button-prev",
+    },
+    breakpoints: {
+      // when window width is >= 320px
+      320: {
+        slidesPerView: 1,
+        spaceBetween: 20,
+      },
+      // when window width is >= 480px
+      480: {
+        slidesPerView: 2,
+        spaceBetween: 30,
+      },
+      // when window width is >= 640px
+      640: {
+        slidesPerView: 3,
+        spaceBetween: 40,
+      },
+    },
+  });
+</script>
