--- a/src/components/TeamCard.astro
+++ b/src/components/TeamCard.astro
@@ -22,7 +22,7 @@ const { name, rol, img, path, skills, color } = Astro.props;
     <a class="primary" href={path}> Portafolio</a>
   </div>
   <div class="skills">
-    <h6>Sigueme en</h6>
+    <h6>Skills</h6>
     {
       skills ? (
         <ul>
