--- a/src/pages/integrantes.astro
+++ b/src/pages/integrantes.astro
@@ -57,7 +57,7 @@ import TeamCard from "../components/TeamCard.astro";
           name="Eduardo Antonio Flores de Leon"
           img={Temo}
           rol="Vaca punteada puta "
-          path="./mario"
+          path="./temo"
           color="#03bfcb"
         />
       </div>
