Cambio de Informacion Mario

--- a/src/pages/marm.astro
+++ b/src/pages/marm.astro
@@ -14,10 +14,7 @@ import IconContainer from "../components/IconContainer.astro";
         <h3>Desarrollador de Software</h3>
       </div>
       <p>
-        Lorem pussy dolor sit amet consectetur adipisicing elit. Quisquam
-        voluptatum, quibusdam, quos, voluptate voluptas quia quae dolorum
-        voluptatibus quod quas natus. Quisquam voluptatum, quibusdam, quos,
-        voluptate voluptas quia quae dolorum voluptatibus quod quas natus.
+        Desarrollador de Software, con experiencia en Frontend, Backend y Base de datos SQL, domino varias plataformas, lenguajes y sistemas integrados. Experiencia con las herramientas y procedimientos de desarrollo novedoso. Capaz de autogestión eficaz en proyectos independientes. Buenas habilidades de colaboracion dentro de un equipo productivo.
       </p>
       <div class="btn-box">
         <a href="" class="btn">Descargar CV</a>
@@ -26,7 +23,7 @@ import IconContainer from "../components/IconContainer.astro";
     </div>
     <div class="img">
       <img
-        src="https://dsm01pap009files.storage.live.com/y4miHcwWeLE6LF7gclmEJLydp6stkSuD0HKMWpdQ7pqcKAD2CpTYYFrxlBjHyDYz6d8FFO7BxX9_ssDGE17b_Ml0uF3jeH5hk5iJwnuleD1s8l18OUgDp8ymXcT-ZXbLjYvioe9KvOFDtqGVYwta1CdaQKXV-eoaisZXFyE1xXEVrwbPZiKvJZDUY92EwLImbum?width=612&height=612&cropmode=none"
+        src="https://dsm01pap009files.storage.live.com/y4mbmRYxYiAL7OxN5KdGG2KLiDuTWDFj8N99PdGlepBGSz51D3XpWKWliVxhd5uVa2P0UskowjfL9UvYC0Wsulh5mY5Cq2MgK6gKEZ6oO20AhF2frVBLsAoPFBuKyZF3QJ3RLyoXwWaPUNzgAUuUkuelZ70p6O62115803mVhi-u1faryKh2M0Pa-rNe7MeIKrk?width=500&height=500&cropmode=none"
         alt="Profile Pic"
         decoding="async"
         loading="lazy"
@@ -50,12 +47,9 @@ import IconContainer from "../components/IconContainer.astro";
               <div class="year">
                 <i class="bx bx-calendar-star"></i> 2000-2000
               </div>
-              <h4>Titulo</h4>
+              <h4>Universidad Politecnica de Tapachula</h4>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Excepturi, quas officiis? Nobis totam quia magnam quasi ut
-                perspiciatis accusamus consectetur nam saepe? Esse, ad animi
-                ipsum recusandae voluptate harum debitis?
+                INGENIERIA DE SOFTWARE - 2020 / 2023
               </p>
             </div>
           </div>
@@ -64,12 +58,9 @@ import IconContainer from "../components/IconContainer.astro";
               <div class="year">
                 <i class="bx bx-calendar-star"></i> 2000-2000
               </div>
-              <h4>Titulo</h4>
+              <h4>Centro de Bachillerato Tecnologico Industrial y de Servicios No.88</h4>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Excepturi, quas officiis? Nobis totam quia magnam quasi ut
-                perspiciatis accusamus consectetur nam saepe? Esse, ad animi
-                ipsum recusandae voluptate harum debitis?
+                PROGRAMACION - 2017 / 2020
               </p>
             </div>
           </div>
