Agregando informacion Marm

--- a/src/pages/marm.astro
+++ b/src/pages/marm.astro
@@ -216,11 +216,15 @@ import IconContainer from "../components/IconContainer.astro";
   <section class="contact" id="contact">
     <h2 class="heading">Contacto</h2>
     <ContactCard
-      pic=""
-      name="TuNombre"
-      role="Front-end"
+pic="https://dsm01pap009files.storage.live.com/y4mbmRYxYiAL7OxN5KdGG2KLiDuTWDFj8N99PdGlepBGSz51D3XpWKWliVxhd5uVa2P0UskowjfL9UvYC0Wsulh5mY5Cq2MgK6gKEZ6oO20AhF2frVBLsAoPFBuKyZF3QJ3RLyoXwWaPUNzgAUuUkuelZ70p6O62115803mVhi-u1faryKh2M0Pa-rNe7MeIKrk?width=500&height=500&cropmode=none"
+      name="Mario Alejandro Rosales Muñoz"
+      role="Full - Stack Developer"
       numJobs="5"
-      address="correo@gmail.com"
+      address="rosalesmunoz17@gmail.com"
+      backgroundColor="#080c12"
+      backgroundHover="#005DCD"
+      backgroundBtn="#15C300"
+      
     />
   </section>
 
