--- a/src/pages/integrantes.astro
+++ b/src/pages/integrantes.astro
@@ -21,7 +21,7 @@ import TeamCard from "../components/TeamCard.astro";
           rol="Full Stack - Senior "
           path="./marm"
           color="#03bfcb"
-          skills={["Front End Development", "Web Development", "Back End Development", "DataBase Develoment"]}
+          skills={["Front End Development", "Back End Development", "DataBase Develoment"]}
         />
       </div>
       <div class="team-member swiper-slide">
