--- a/src/pages/integrantes.astro
+++ b/src/pages/integrantes.astro
@@ -3,7 +3,7 @@ import Team from "../layouts/Team.astro";
 import Chepe from "../../public/assets/Chepe.jpg";
 import Mario from "../../public/assets/Mario.jpg";
 import Senuez from "../../public/assets/Senuez.png";
-import Kike from "../../public/assets/Kike.jpg";
+import Enagar from "../../public/assets/Enagar.png";
 import Temo from "../../public/assets/Temo.jpg";
 import TeamCard from "../components/TeamCard.astro";
 /* Aqui se importa los componentes si es que usan */
@@ -47,10 +47,11 @@ import TeamCard from "../components/TeamCard.astro";
       <div class="team-member swiper-slide">
         <TeamCard
           name="Enrique Aguilar Armenta"
-          img={Kike}
-          rol="Puta Barara "
-          path="./"
-          color="#03bfcb"
+          img={Enagar}
+          rol=" FrontEnd Developer "
+          path="./enagar"
+          color="#da3e8f"
+          skills={[ "Front End Development", "Web Development"]}
         />
       </div>
       <div class="team-member swiper-slide">
