Arreglo de imagen del senuez

--- a/src/pages/cesar.astro
+++ b/src/pages/cesar.astro
@@ -271,6 +271,7 @@ body{
 
   .img img {
     width: 100%;
+    max-width: 400px;
     height: auto;
     animation: float 3s ease-in-out infinite;
   }
