--- a/src/pages/integrantes.astro
+++ b/src/pages/integrantes.astro
@@ -1,6 +1,6 @@
 ---
 import Team from "../layouts/Team.astro";
-import Chepe from "../../public/assets/Chepe.jpg";
+import Chepe from "../../public/assets/Chepe.png";
 import Mario from "../../public/assets/Mario.jpg";
 import Senuez from "../../public/assets/Senuez.png";
 import Enagar from "../../public/assets/Enagar.png";
