--- a/src/pages/marm.astro
+++ b/src/pages/marm.astro
@@ -17,7 +17,12 @@ import IconContainer from "../components/IconContainer.astro";
         Desarrollador de Software, con experiencia en Frontend, Backend y Base de datos SQL, domino varias plataformas, lenguajes y sistemas integrados. Experiencia con las herramientas y procedimientos de desarrollo novedoso. Capaz de autogestión eficaz en proyectos independientes. Buenas habilidades de colaboracion dentro de un equipo productivo.
       </p>
       <div class="btn-box">
-        <a href="" class="btn">Descargar CV</a>
+        <a
+          href="./cv/CV-ROSALESMUÑOZMARIO.pdf"
+          download
+          type="button"
+          class="btn">Descargar CV</a
+        >
         <a href="#contact" class="btn">Contacto</a>
       </div>
     </div>
@@ -45,22 +50,22 @@ import IconContainer from "../components/IconContainer.astro";
           <div class="edu-cont">
             <div class="content">
               <div class="year">
-                <i class="bx bx-calendar-star"></i> 2000-2000
+                <i class="bx bx-calendar-star"></i>  2020 - 2023
               </div>
               <h4>Universidad Politecnica de Tapachula</h4>
               <p>
-                INGENIERIA DE SOFTWARE - 2020 / 2023
+                INGENIERIA DE SOFTWARE 
               </p>
             </div>
           </div>
           <div class="edu-cont">
             <div class="content">
               <div class="year">
-                <i class="bx bx-calendar-star"></i> 2000-2000
+                <i class="bx bx-calendar-star"></i> 2017 - 2020
               </div>
               <h4>Centro de Bachillerato Tecnologico Industrial y de Servicios No.88</h4>
               <p>
-                PROGRAMACION - 2017 / 2020
+                PROGRAMACION
               </p>
             </div>
           </div>
