--- a/src/pages/cesar.astro
+++ b/src/pages/cesar.astro
@@ -19,7 +19,12 @@ import Senuez from "../../public/assets/Senuez.png";
         Estudiante de Ingeniería En Software. Con capacidad para aprender y aplicar mis conocimientos al ámbito profesional.
       </p>
       <div class="btn-box">
-        <a href="#" class="btn">Descargar CV</a>
+        <a
+          href="./cv/Curriculum-CesarEduardoZepedaMelendez.pdf"
+          download
+          type="button"
+          class="btn">Descargar CV</a
+        >
         <a href="#contact" class="btn">Contacto</a>
       </div>
     </div>
