--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -86,9 +86,9 @@ import Footer from "../components/Footer.astro";
       />
       <div class="card-content">
         <h2>POLICARD</h2>
-        <p>
+        <p class="center">
           Applicación Web para UPTAP. Desarrollado con Svelte, es una aplicación
-          web que hace uso de una API-REST desarrollada con DJANGO; el objetivo
+          web que hace uso de una API-REST desarrollada con DJANGO; <br>el objetivo
           es crear un sistema de credencialización para la Universidad
         </p>
         <div class="btnContainer">
