--- a/src/pages/marm.astro
+++ b/src/pages/marm.astro
@@ -36,8 +36,8 @@ import IconContainer from "../components/IconContainer.astro";
     </div>
     <br/>
     <div class="social">
-      <a href=""><i class="bx bxl-linkedin"></i></a>
-      <a href=""><i class="bx bxl-github"></i></a>
+      <a href="https://www.linkedin.com/in/mario-alejandro-rosales/"><i class="bx bxl-linkedin"></i></a>
+      <a href="https://github.com/MarioRosales10"><i class="bx bxl-github"></i></a>
       <!-- Si quieres más agregalas -->
     </div>
   </section>
