--- a/src/pages/temo.astro
+++ b/src/pages/temo.astro
@@ -10,16 +10,22 @@ import Fototemo from "../../public/assets/temof.png";
 <Folio title="Eduardo Antonio Flores de León">
   <section class="hero" id="home">
     <div class="hero-content">
-      <h1>Hola 👋 soy <span>Edu Flores</span></h1>
+      <h1>Hola 👋 soy <span>Eduardo Antonio Flores de Leon</span></h1>
       <div class="text-animate">
         <h3>Desarrollador de Software</h3>
       </div>
       <p>
         Estudiante de Ingeniería En Software. Con capacidad para aprender y aplicar mis conocimientos al ámbito profesional.
-        Desarrollo FrontEnd con las tecnologias actuales, agrego mi gusto por el diseño y los negocios. Me gusta trabajar en equipo.
+        Agrego mi gusto por el diseño y los negocios. Me gusta trabajar en equipo.
       </p>
+      
       <div class="btn-box">
-        <a href="#" class="btn">Descargar CV</a>
+        <a
+          href="./cv/CV - Eduardo Flores de Leon.pdf"
+          download
+          type="button"
+          class="btn">Descargar CV</a
+        >
         <a href="#contact" class="btn">Contacto</a>
       </div>
     </div>
@@ -31,6 +37,7 @@ import Fototemo from "../../public/assets/temof.png";
         loading="lazy"
       />
     </div>
+    <br/><br/>
     <div class="social">
       <a href="https://www.linkedin.com/in/eduardo-flores-de-le%C3%B3n-27019b248"><i class="bx bxl-linkedin"></i></a>
       <a href="https://github.com/Temo-17"><i class="bx bxl-github"></i></a>
@@ -217,7 +224,7 @@ import Fototemo from "../../public/assets/temof.png";
       pic={Fototemo}
       name="Eduardo Antonio Flores de León"
       role="Front-end Development"
-      numJobs="5"
+      numJobs="4"
       address="fedu17t@gmail.com"
       backgroundColor="#535A00"
       backgroundHover="#e4e407"
