--- a/src/pages/cesar.astro
+++ b/src/pages/cesar.astro
@@ -37,7 +37,7 @@ import Senuez from "../../public/assets/Senuez.png";
       />
     </div>
     <div class="social">
-      <a href="www.linkedin.com/in/cesar-eduardo-zepeda-melendez-91906a27a"><i class="bx bxl-linkedin"></i></a>
+      <a href="https://www.linkedin.com/in/cesar-eduardo-zepeda-melendez-91906a27a/"><i class="bx bxl-linkedin"></i></a>
       <a href="https://github.com/CesarZepeda23"><i class="bx bxl-github"></i></a>
       <!-- Si quieres más agregalas -->
     </div>
