--- a/src/layouts/Folio.astro
+++ b/src/layouts/Folio.astro
@@ -14,12 +14,45 @@ import "../styles/global.css";
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
     <meta name="generator" content={Astro.generator} />
+    <meta name="title" content={title} />
+    <meta
+      name="description"
+      content=`${title} soy un desarrollador de software enfocado en el desarrollo web. Miembro de MEXIC0DE`
+    />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content={title} />
+    <meta
+      property="og:description"
+      content=`${title} soy un desarrollador de software enfocado en el desarrollo web. Miembro de MEXIC0DE`
+    />
+    <meta
+      property="og:image"
+      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content={title} />
+    <meta
+      property="twitter:description"
+      content=`${title} soy un desarrollador de software enfocado en el desarrollo web. Miembro de MEXIC0DE`
+    />
+    <meta
+      property="twitter:image"
+      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+    />
     <title>{title}</title>
   </head>
   <body>
