--- a/src/layouts/Folio.astro
+++ b/src/layouts/Folio.astro
@@ -30,7 +30,7 @@ import "../styles/global.css";
     />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content={Astro.url} />
+    <meta property="og:url" content="https://mexic0de.page/" />
     <meta property="og:title" content={title} />
     <meta
       property="og:description"
@@ -43,7 +43,7 @@ import "../styles/global.css";
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content={Astro.url} />
+    <meta property="twitter:url" content="https://mexic0de.page/" />
     <meta property="twitter:title" content={title} />
     <meta
       property="twitter:description"
