--- a/src/layouts/Team.astro
+++ b/src/layouts/Team.astro
@@ -32,7 +32,7 @@ import "../styles/global.css";
       content="MEXIC0DE es el sitio oficial de MEXICODE un grupo de desarrolladores mexicanos de software, enfocados en soluciones web"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content={Astro.url} />
+    <meta property="og:url" content="https://mexic0de.page/"/>
     <meta property="og:title" content="MEXIC0DE" />
     <meta
       property="og:description"
@@ -43,7 +43,7 @@ import "../styles/global.css";
       content="https://phx02pap002files.storage.live.com/y4mjCuSoDICUagL1hWYLfcFl9KKor_iqh-F9R2XBkBOMpJeZIyFzkpL6Jesfj2RShyW9SdTCUknfY790RtT0XZ3IjKMsWjc6AjrPVqCrSRbZ-DxUSGRxOup7oz3l6L98ymp75evxkeraixQM6Sapfd4-7mWp1lH3rdOd937OjPMxGMFnFaIubb31nU1BWtDPLqi?width=960&height=720&cropmode=none"
     />
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content={Astro.url} />
+    <meta property="twitter:url" content="https://mexic0de.page/" />
     <meta property="twitter:title" content="MEXIC0DE" />
     <meta
       property="twitter:description"
